--- a/wipro/Lab12.properties
+++ b/wipro/Lab12.properties
@@ -1,14 +1,5 @@
-# ===== Application URL =====
 url=https://tutorialsninja.com/demo/index.php
 
-# ===== Test Data =====
 username=madanaaparna@gmail.com
-password=aparna@123
+password=123456789
 
-# ===== Locators (Object Repository) =====
-myaccount_link=//a[@title='My Account']
-
-login_link=//a[text()='Login']
-email_field=//input[@id='input-email']
-password_field=//input[@id='input-password']
-login_button=//input[@value='Login']
